fixed mobile horizontal scroll issue, and the hero section title for mobile

--- a/src/Components/Hero/heroStyle.scss
+++ b/src/Components/Hero/heroStyle.scss
@@ -143,6 +143,13 @@
 
     .title-container {
       top: 30% !important;
+      // right: unset !important;
+      // left: 0;
+
+      h1 {
+        font-size: calc(4.375rem + 4.5vw) !important;
+        // text-align: left !important;
+      }
     }
 }
 
